--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -108,6 +108,11 @@
 .logo {
   position: relative;
 }
+
+.invalid {
+  color: var(--red);
+}
+
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
